bloodhound-tui/src/snapshots/bloodhound_tui__render_tests__tab_exec.snap
---
source: bloodhound-tui/src/render_tests.rs
assertion_line: 160
expression: render(&app)
---
"┌ History (10 commands) ─────────────────┐┌ Output (0 lines) ──────────────────────────────────────────────────────────────────────────────┐"
"│00:00:06 ▸ [pre-session] (50/13299)     ││No terminal output for this command.                                                            │"
"│00:00:07 ▸ ls -la /etc/ (1/960)         ││                                                                                                │"
"│00:00:07 ▸ cat /etc/hostname (1/288)    ││                                                                                                │"
"│00:00:08 ▸ head -5 /etc/passwd (1/304)  ││                                                                                                │"
"│00:00:08 ▸ grep "root" /etc/passwd (1/32││                                                                                                │"
"│00:00:09 ▸ wc -l /etc/passwd (1/311)    ││                                                                                                │"
"│00:00:09 ▸ cat /etc/os-release (1/446)  ││                                                                                                │"
"│00:00:10 ▸ cat /etc/shells (1/284)      ││                                                                                                │"
"│00:00:10   exit (24)                    ││                                                                                                │"
"│00:00:10 ▸ logout (1/359)               ││                                                                                                │"
"│                                        ││                                                                                                │"
"│                                        ││                                                                                                │"
"│                                        │└────────────────────────────────────────────────────────────────────────────────────────────────┘"
"│                                        │┌ Events ────────────────────────────────────────────────────────────────────────────────────────┐"
"│                                        ││ 1:All │ 2:Exec │ 3:Syscall │ 4:Files │ 5:Network                                               │"
"│                                        │└────────────────────────────────────────────────────────────────────────────────────────────────┘"
"│                                        ││ EXEC  execve /usr/lib/systemd/systemd [/usr/lib/systemd/systemd --user] (pid:295 rc=0)         │"
"│                                        ││ EXEC  execve /usr/lib/systemd/user-environment-generators/30-systemd-environment-d-generator [/│"
"│                                        ││ EXEC  execve /usr/lib/systemd/user-generators/systemd-xdg-autostart-generator [/usr/lib/systemd│"
"│                                        ││ EXEC  execve /proc/self/fd/9 [/usr/lib/systemd/systemd-executor --deserialize 12 --log-level in│"
"│                                        ││ EXEC  execve /bin/systemctl [/bin/systemctl --user set-environment DBUS_SESSION_BUS_ADDRESS=uni│"
"│                                        ││ EXEC  execve /bin/sh [sh -c -- /usr/bin/env -i PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/u│"
"│                                        ││ EXEC  execve /usr/bin/env [/usr/bin/env -i PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/b│"
"│                                        ││ EXEC  execve /usr/local/sbin/run-parts [run-parts --lsbsysinit /etc/update-motd.d] (pid:305 rc=│"
"│                                        ││ EXEC  execve /usr/local/bin/run-parts [run-parts --lsbsysinit /etc/update-motd.d] (pid:305 rc=-│"
"│                                        ││ EXEC  execve /usr/sbin/run-parts [run-parts --lsbsysinit /etc/update-motd.d] (pid:305 rc=-2)   │"
"│                                        ││ EXEC  execve /usr/bin/run-parts [run-parts --lsbsysinit /etc/update-motd.d] (pid:305 rc=0)     │"
"│                                        ││ EXEC  execve /etc/update-motd.d/00-header [/etc/update-motd.d/00-header] (pid:306 rc=0)        │"
"│                                        ││ EXEC  execve /usr/bin/uname [uname -o] (pid:307 rc=0)                                          │"
"│                                        ││ EXEC  execve /usr/bin/uname [uname -r] (pid:308 rc=0)                                          │"
"│                                        ││ EXEC  execve /usr/bin/uname [uname -m] (pid:309 rc=0)                                          │"
"│                                        ││ EXEC  execve /etc/update-motd.d/10-help-text [/etc/update-motd.d/10-help-text] (pid:310 rc=0)  │"
"│                                        ││ EXEC  execve /etc/update-motd.d/50-motd-news [/etc/update-motd.d/50-motd-news] (pid:311 rc=0)  │"
"│                                        ││ EXEC  execve /etc/update-motd.d/60-unminimize [/etc/update-motd.d/60-unminimize] (pid:312 rc=0)│"
"│                                        ││ EXEC  execve /bin/bash [-bash] (pid:314 rc=0)                                                  │"
"│                                        ││ EXEC  execve /usr/bin/groups [groups] (pid:315 rc=0)                                           │"
"│                                        ││ EXEC  execve /usr/bin/locale-check [/usr/bin/locale-check C.UTF-8] (pid:316 rc=0)              │"
"└────────────────────────────────────────┘└────────────────────────────────────────────────────────────────────────────────────────────────┘"
" 01_file_exploration.ndjson  │ 17164 events total │ Command 1/10 │ 13299 events │ ▶ History   j/k:nav  ⏎:expand  Tab:pane  1-5:tab  q:quit  "
