bloodhound-tui/src/snapshots/bloodhound_tui__render_tests__tab_files.snap
---
source: bloodhound-tui/src/render_tests.rs
expression: render(&app)
---
"┌ History (10 commands) ─────────────────┐┌ Output (0 lines) ──────────────────────────────────────────────────────────────────────────────┐"
"│00:00:06 ▸ [pre-session] (50/13299)     ││No terminal output for this command.                                                            │"
"│00:00:07 ▸ ls -la /etc/ (1/960)         ││                                                                                                │"
"│00:00:07 ▸ cat /etc/hostname (1/288)    ││                                                                                                │"
"│00:00:08 ▸ head -5 /etc/passwd (1/304)  ││                                                                                                │"
"│00:00:08 ▸ grep "root" /etc/passwd (1/32││                                                                                                │"
"│00:00:09 ▸ wc -l /etc/passwd (1/311)    ││                                                                                                │"
"│00:00:09 ▸ cat /etc/os-release (1/446)  ││                                                                                                │"
"│00:00:10 ▸ cat /etc/shells (1/284)      ││                                                                                                │"
"│00:00:10   exit (24)                    ││                                                                                                │"
"│00:00:10 ▸ logout (1/359)               ││                                                                                                │"
"│                                        ││                                                                                                │"
"│                                        ││                                                                                                │"
"│                                        │└────────────────────────────────────────────────────────────────────────────────────────────────┘"
"│                                        │┌ Events ────────────────────────────────────────────────────────────────────────────────────────┐"
"│                                        ││ 1:All │ 2:Exec │ 3:Syscall │ 4:Files │ 5:Network                                               │"
"│                                        │└────────────────────────────────────────────────────────────────────────────────────────────────┘"
"│                                        ││ FILE  READ /etc/passwd (pid:291 rc=3)                                                          │"
"│                                        ││ FILE  READ  (pid:291 rc=3)                                                                     │"
"│                                        ││ FILE  READ /etc/login.defs (pid:291 rc=3)                                                      │"
"│                                        ││ FILE  READ /etc/passwd (pid:291 rc=3)                                                          │"
"│                                        ││ FILE  READ /etc/group (pid:291 rc=3)                                                           │"
"│                                        ││ FILE  READ /etc/login.defs (pid:291 rc=3)                                                      │"
"│                                        ││ FILE  READ /proc/self/loginuid (pid:291 rc=3)                                                  │"
"│                                        ││ FILE  READ /etc/passwd (pid:291 rc=3)                                                          │"
"│                                        ││ FILE  READ /etc/passwd (pid:291 rc=3)                                                          │"
"│                                        ││ FILE  READ /run/systemd/userdb/ (pid:291 rc=5)                                                 │"
"│                                        ││ FILE  READ /proc/sys/kernel/random/boot_id (pid:291 rc=5)                                      │"
"│                                        ││ FILE  READ / (pid:291 rc=5)                                                                    │"
"│                                        ││ FILE  READ / (pid:291 rc=7)                                                                    │"
"│                                        ││ FILE  READ / (pid:291 rc=10)                                                                   │"
"│                                        ││ FILE  READ etc (pid:291 rc=11)                                                                 │"
"│                                        ││ FILE  READ userdb (pid:291 rc=-2)                                                              │"
"│                                        ││ FILE  READ / (pid:291 rc=5)                                                                    │"
"│                                        ││ FILE  READ / (pid:291 rc=7)                                                                    │"
"│                                        ││ FILE  READ / (pid:291 rc=10)                                                                   │"
"│                                        ││ FILE  READ run (pid:291 rc=11)                                                                 │"
"│                                        ││ FILE  READ userdb (pid:291 rc=-2)                                                              │"
"└────────────────────────────────────────┘└────────────────────────────────────────────────────────────────────────────────────────────────┘"
" 01_file_exploration.ndjson  │ 17164 events total │ Command 1/10 │ 13299 events │ ▶ History   j/k:nav  ⏎:expand  Tab:pane  1-5:tab  q:quit  "
