bloodhound-tui/src/snapshots/bloodhound_tui__render_tests__tab_network.snap
---
source: bloodhound-tui/src/render_tests.rs
expression: render(&app)
---
"┌ History (10 commands) ─────────────────┐┌ Output (0 lines) ──────────────────────────────────────────────────────────────────────────────┐"
"│00:00:06 ▸ [pre-session] (50/13299)     ││No terminal output for this command.                                                            │"
"│00:00:07 ▸ ls -la /etc/ (1/960)         ││                                                                                                │"
"│00:00:07 ▸ cat /etc/hostname (1/288)    ││                                                                                                │"
"│00:00:08 ▸ head -5 /etc/passwd (1/304)  ││                                                                                                │"
"│00:00:08 ▸ grep "root" /etc/passwd (1/32││                                                                                                │"
"│00:00:09 ▸ wc -l /etc/passwd (1/311)    ││                                                                                                │"
"│00:00:09 ▸ cat /etc/os-release (1/446)  ││                                                                                                │"
"│00:00:10 ▸ cat /etc/shells (1/284)      ││                                                                                                │"
"│00:00:10   exit (24)                    ││                                                                                                │"
"│00:00:10 ▸ logout (1/359)               ││                                                                                                │"
"│                                        ││                                                                                                │"
"│                                        ││                                                                                                │"
"│                                        │└────────────────────────────────────────────────────────────────────────────────────────────────┘"
"│                                        │┌ Events ────────────────────────────────────────────────────────────────────────────────────────┐"
"│                                        ││ 1:Process │ 2:Security │ 3:Files │ 4:Network                                                   │"
"│                                        │└────────────────────────────────────────────────────────────────────────────────────────────────┘"
"│                                        ││00:00:06  NET   socket (pid:291 rc=3)                                                           │"
"│                                        ││00:00:06  NET   connect :0 (pid:291 rc=0)                                                       │"
"│                                        ││00:00:06  NET   sendto :0 (pid:291 rc=116)                                                      │"
"│                                        ││00:00:06  NET   socket (pid:291 rc=5)                                                           │"
"│                                        ││00:00:06  NET   connect :0 (pid:291 rc=-2)                                                      │"
"│                                        ││00:00:06  NET   socket (pid:291 rc=7)                                                           │"
"│                                        ││00:00:06  NET   connect :0 (pid:291 rc=0)                                                       │"
"│                                        ││00:00:06  NET   sendto :0 (pid:291 rc=123)                                                      │"
"│                                        ││00:00:06  NET   recvfrom :0 (pid:291 rc=66)                                                     │"
"│                                        ││00:00:06  NET   socket (pid:291 rc=5)                                                           │"
"│                                        ││00:00:06  NET   bind :0 (pid:291 rc=0)                                                          │"
"│                                        ││00:00:06  NET   connect :0 (pid:291 rc=0)                                                       │"
"│                                        ││00:00:06  NET   socket (pid:295 rc=7)                                                           │"
"│                                        ││00:00:06  NET   connect :0 (pid:295 rc=0)                                                       │"
"│                                        ││00:00:06  NET   sendto :0 (pid:295 rc=124)                                                      │"
"│                                        ││00:00:06  NET   socket (pid:295 rc=8)                                                           │"
"│                                        ││00:00:06  NET   connect :0 (pid:295 rc=-2)                                                      │"
"│                                        ││00:00:06  NET   socket (pid:295 rc=9)                                                           │"
"│                                        ││00:00:06  NET   connect :0 (pid:295 rc=0)                                                       │"
"│                                        ││00:00:06  NET   sendto :0 (pid:295 rc=123)                                                      │"
"│                                        ││00:00:06  NET   recvfrom :0 (pid:295 rc=66)                                                     │"
"└────────────────────────────────────────┘└────────────────────────────────────────────────────────────────────────────────────────────────┘"
" 01_file_exploration.ndjson  │ 17164 events total │ Command 1/10 │ 13299 events │ ▶ History   j/k:nav  ⏎:expand  Tab:pane  1-4:tab  q:quit  "
