bloodhound-tui/src/snapshots/bloodhound_tui__render_tests__tab_security.snap
---
source: bloodhound-tui/src/render_tests.rs
expression: render(&app)
---
"┌ History (10 commands) ─────────────────┐┌ Output (0 lines) ──────────────────────────────────────────────────────────────────────────────┐"
"│00:00:06 ▸ [pre-session] (50/13299)     ││No terminal output for this command.                                                            │"
"│00:00:07 ▸ ls -la /etc/ (1/960)         ││                                                                                                │"
"│00:00:07 ▸ cat /etc/hostname (1/288)    ││                                                                                                │"
"│00:00:08 ▸ head -5 /etc/passwd (1/304)  ││                                                                                                │"
"│00:00:08 ▸ grep "root" /etc/passwd (1/32││                                                                                                │"
"│00:00:09 ▸ wc -l /etc/passwd (1/311)    ││                                                                                                │"
"│00:00:09 ▸ cat /etc/os-release (1/446)  ││                                                                                                │"
"│00:00:10 ▸ cat /etc/shells (1/284)      ││                                                                                                │"
"│00:00:10   exit (24)                    ││                                                                                                │"
"│00:00:10 ▸ logout (1/359)               ││                                                                                                │"
"│                                        ││                                                                                                │"
"│                                        ││                                                                                                │"
"│                                        │└────────────────────────────────────────────────────────────────────────────────────────────────┘"
"│                                        │┌ Events ────────────────────────────────────────────────────────────────────────────────────────┐"
"│                                        ││ 1:Process │ 2:Security │ 3:Files │ 4:Network                                                   │"
"│                                        │└────────────────────────────────────────────────────────────────────────────────────────────────┘"
"│                                        ││00:00:06  SEC   fcntl (pid:291 rc=8)                                                            │"
"│                                        ││00:00:06  SEC   mmap (pid:295 rc=125102777696256)                                               │"
"│                                        ││00:00:06  SEC   mmap (pid:295 rc=125102777991168)                                               │"
"│                                        ││00:00:06  SEC   mmap (pid:295 rc=125102779084800)                                               │"
"│                                        ││00:00:06  SEC   mmap (pid:295 rc=125102779478016)                                               │"
"│                                        ││00:00:06  SEC   mmap (pid:295 rc=125102773501952)                                               │"
"│                                        ││00:00:06  SEC   mmap (pid:295 rc=125102773936128)                                               │"
"│                                        ││00:00:06  SEC   mmap (pid:295 rc=125102776328192)                                               │"
"│                                        ││00:00:06  SEC   mmap (pid:295 rc=125102777135104)                                               │"
"│                                        ││00:00:06  SEC   mmap (pid:295 rc=125102781423616)                                               │"
"│                                        ││00:00:06  SEC   pread64 (pid:295 rc=784)                                                        │"
"│                                        ││00:00:06  SEC   pread64 (pid:295 rc=784)                                                        │"
"│                                        ││00:00:06  SEC   mmap (pid:295 rc=125102769307648)                                               │"
"│                                        ││00:00:06  SEC   mmap (pid:295 rc=125102769471488)                                               │"
"│                                        ││00:00:06  SEC   mmap (pid:295 rc=125102771077120)                                               │"
"│                                        ││00:00:06  SEC   mmap (pid:295 rc=125102771400704)                                               │"
"│                                        ││00:00:06  SEC   mmap (pid:295 rc=125102781337600)                                               │"
"│                                        ││00:00:06  SEC   mmap (pid:295 rc=125102781349888)                                               │"
"│                                        ││00:00:06  SEC   mmap (pid:295 rc=125102781390848)                                               │"
"│                                        ││00:00:06  SEC   mmap (pid:295 rc=125102781415424)                                               │"
"│                                        ││00:00:06  SEC   mmap (pid:295 rc=125102781149184)                                               │"
"└────────────────────────────────────────┘└────────────────────────────────────────────────────────────────────────────────────────────────┘"
" 01_file_exploration.ndjson  │ 17164 events total │ Command 1/10 │ 13299 events │ ▶ History   j/k:nav  ⏎:expand  Tab:pane  1-4:tab  q:quit  "
